--- a/code/index_style.css
+++ b/code/index_style.css
@@ -8,11 +8,8 @@ footer{
 body{
   padding: 1em;
 }
-.frame2{
-  
-}
 .left {
-  position: relative;
+  display: flex;
   left: 0px;
   width: 350px;
   border: 3px solid #73AD21;
@@ -20,10 +17,9 @@ body{
 }
 
 .right {
-  position: absolute;
   right: 0px;
-  width: 1000px;
-  border: 2px solid #73AD21;
+  /*width: 1000px;*/
+  border: 1px solid #73AD21;
   padding: 10px;
   float: right;
 }
