--- a/code/index_style.css
+++ b/code/index_style.css
@@ -8,8 +8,11 @@ footer{
 body{
   padding: 1em;
 }
+.frame2{
+  
+}
 .left {
-  display: flex;
+  position: relative;
   left: 0px;
   width: 350px;
   border: 3px solid #73AD21;
@@ -17,9 +20,10 @@ body{
 }
 
 .right {
+  position: absolute;
   right: 0px;
-  /*width: 1000px;*/
-  border: 1px solid #73AD21;
+  width: 1000px;
+  border: 2px solid #73AD21;
   padding: 10px;
   float: right;
 }
