--- a/code/index_style.css
+++ b/code/index_style.css
@@ -8,16 +8,15 @@ footer{
   position: relative;
 }
 .title{
-  position: absolute;
   left: 50%;
 }
 .sub-title{
-  position: absolute;
   left:50%;
 }
 .explain{
   position: absolute;
   top: 8px;
+  opacity: 1;
 }
 .bgrd{
   opacity: 0.5;
