--- a/code/index_style.css
+++ b/code/index_style.css
@@ -17,12 +17,14 @@ footer{
 .explain{
   position: absolute;
   top: 8px;
-  opacity: 1;
+  opacity: 0.5;
+  background-color: #ffffff;
 }
 
-.bgrd{
+/*.bgrd{
   opacity: 0.5;
-}
+}*/
+
 body{
   padding: 1em;
 }
