--- a/code/index_style.css
+++ b/code/index_style.css
@@ -5,7 +5,7 @@ footer{
   margin-top: 10%;
 }
 .frame1{
-  background: url("images/Background1.png");
+  background-image: url(images/Background1.png);
   position: absolute;
 }
 .title{
