--- a/code/index_style.css
+++ b/code/index_style.css
@@ -16,12 +16,16 @@ select{
   padding-right: 2%;
   border-radius: 5%;
   font-size: 105%;
+  margin-bottom: 1%;
 }
 select:hover {
   background-color: #ffc1f2;
 }
 option{
   word-wrap: break-word;
+}
+option:hover, select:hover{
+  cursor: pointer;
 }
 .vis-title{
   font-size: 350%;
@@ -34,8 +38,15 @@ option{
   margin-right: 10%;
   margin-top: 7%;
   /*border: 3px solid #4286f4;*/
-  width: 100vw;
+  width: 90vw;
   font-size: 130%;
+  background: none;
+  cursor: pointer;
+  color: black;
+}
+.introFrame a:hover{
+  color: #5588c1;
+  text-decoration: none;
 }
 .introFrame:after
 {
@@ -49,7 +60,7 @@ option{
     margin-right: 25%;
     margin-left: 50%;
     margin-bottom: 1%;
-    margin-top: 1%;
+    margin-top: 2%;
 }
 
 
@@ -73,7 +84,7 @@ option{
 }
 
 .side-filter{
-  width: 100%;
+  width: 95%;
   padding-left: 0%;
   display: flex;
   flex-direction: column;
@@ -124,7 +135,7 @@ label{
   display: inline-block;
   margin-left: 1%;
   margin-right: 1%;
-  width: 100vw;
+  width: 90vw;
   height: 20%;
   padding: 5%;
 
@@ -137,6 +148,7 @@ label{
   margin: 5%;
   font-weight: bold;
   color: #000000;
+  color: black;
 }
 
 #frame1{
@@ -146,7 +158,7 @@ label{
   display: inline-block;
   margin-left: 1%;
   margin-right: 1%;
-  width: 100vw;
+  width: 90vw;
   height: 80vh;
 }
 #insideFrame1{
@@ -163,14 +175,15 @@ label{
   margin-left: auto;
   margin-right: auto;
   opacity: 0.3;
-  width: 95vw;
+  width: 90vw;
 }
 
 #frame2{
   padding: 1%;
   /*border: 3px solid #4286f4;*/
-  width: 100vw;
+  width: 96vw;
   height: 100vh;
+  margin-bottom: 5%;
 
   display: flex;
   flex-direction: row;
@@ -184,11 +197,12 @@ label{
   margin-bottom: 6%;
   /*border: 3px solid #4286f4;*/
   display: inline-block;
-  width: 100vw;
+  width: 90vw;
 }
 #didUSee{
-  margin-top: 5%;
-  font-size: 120%;
+  margin-top: 3%;
+  margin-bottom: 1%;
+  font-size: 100%;
 }
 #reveal{
   background-color: #fceff9 ;
@@ -197,6 +211,7 @@ label{
   height: 5%;
   width:25%;
   margin-left: 1%;
+  margin-bottom: 1%;
   padding-left: 2%;
   padding-right: 2%;
   border-radius: 10%;
@@ -217,8 +232,9 @@ label{
 #frame4{
   margin-bottom: 10%;
   /*border: 3px solid #4286f4;*/
-  width:  100vw;
+  width:  94vw;
   height: 100vh;
+  margin-bottom: 12%;
 
   display: flex;
   flex-direction: row;
@@ -229,13 +245,37 @@ label{
   padding-left: 2%;
   padding-right: 2%;
   /*border: 3px solid #4286f4;*/
-  width: 100vw;
+  width: 90vw;
   height: 80vh;
 
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+#frame6{
+  padding-left: 10%;
+  padding-right: 10%;
+  width: 90vw;
+  margin-top: 3%;
+  margin-bottom: 10%;
+  text-align: center;
+}
+
+#frame6:after
+{
+    border:2px solid #d0d0d0;
+    border-radius:4px;
+    box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
+    transform:translateX(-50%);
+    content:' ';
+    display:block;
+    width: 50%;
+    margin-right: 25%;
+    margin-left: 50%;
+    margin-bottom: 1%;
+    margin-top: 1%;
 }
 
 
@@ -245,12 +285,12 @@ label{
   padding-right: 2%;
   padding-top: 2%;
   left: 0%;
-  width: 25%;
+  width: 23%;
   height: 100%;
   /*font-size: 90%*/
 }
 #left2 p{
-  margin-bottom: 7%;
+  margin-bottom: 4%;
   padding-top: 0%;
 }
 
@@ -282,7 +322,7 @@ label{
 }
 
 #left4 {
-  padding: 7%;
+  padding: 5%;
   padding-right: 4%;
   margin-bottom: 2%;
   padding-top: 5%;
@@ -316,26 +356,29 @@ label{
 
 #right5 {
   padding-top: 3%;
-  padding-left: 2%;
+  padding-left: 0%;
   margin-bottom: 5%;
   right: 0%;
-  right: 0px;
   width: 60%;
   height: 100%;
-  float: right;
-
+  /*float: right;*/
 }
 
 #tks{
   display: inline-block;
-  width: 100vw;
+  width: 90vw;
   text-align: center;
-  font-size: 90%;
+  font-size: 100%;
 }
 #tks ul{
   padding-left:40%;
   padding-right:20%;
   text-align: left;
+}
+#links{
+  margin-top: 4%;
+  text-align: center;
+
 }
 
 svg{
@@ -371,6 +414,13 @@ svg{
   flex-wrap: wrap;
   justify-content: space-around;
 }
+#legendMaps{
+  font-size: 70%;
+  text-align: center;
+  padding-left: 35%;
+  height: 2%;
+  margin-bottom: -10%;
+}
 
 .vaContainer1{
     text-align: center;
@@ -393,27 +443,29 @@ svg{
     /*border: 3px solid #73AD21;*/
     text-align: left;
     padding-left: 0%;
-    margin-left: 2%;
+    margin-right: 0%;
+    margin-left: 0%;
+    padding-top: 1%;
+    margin-top: -2%;
     flex: 1;
     width: 50%;
     padding-bottom: 0%;
 }
+#colcut, #colcut2{
+  padding-top: 2.5%;
+}
 .column {
     text-align: center;
     flex: 1;
-    margin: auto;
-    width: 25%; 
+    padding-right: 2%;
+    padding-left: 2%
+    width: 29%; 
     padding-bottom: 1%;
 }
 
-.title_hist_cut{
-  padding-left: 20%;
-  padding-bottom: 0%;
-  margin-bottom: 0%;
-}
-.title_hist_cut2{
-  padding-left: 20%;
-  padding-bottom: 0%;
+.title_hist_cut, .title_hist_cut2{
+  padding-left: 30%;
+  padding-bottom: 2%;
   margin-bottom: 0%;
 }
 
@@ -421,9 +473,35 @@ svg{
   cursor: pointer;
 }
 .bottomImg{
-  width: 80%;
+  width: 90%;
+  /*padding-right: 10%;*/
+}
+#right52{
+  padding-left: 20%;
 }
 
+a{
+  color: black;
+  text-decoration: none;
+  width: 100%;
+}
+#frame6 a, #tks a, #links a{
+  color: #5588c1;
+}
+#explain a:hover {
+  width: 100%;
+  background-color: #ffc1f2;
+  border-radius: 5%;
+  padding: 0.2%;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
+  color: black;
+  text-decoration: none;
+}
+
+rect{
+  border-radius: 1%;
+}
 ol{
   display: inline-block;
   text-align: left;
